--- a/compton/compton.conf
+++ b/compton/compton.conf
@@ -87,7 +87,8 @@ shadow-blue = 0.0;
 shadow-exclude = [
     "! name~=''",
     "name = 'Notification'",
-    "name *= 'compton'"
+    "name *= 'compton'",
+    "class = 'i3bar'"
 ];
 
 # Avoid drawing shadow on all shaped windows (see also: --detect-rounded-corners)
