--- a/compton/compton.conf
+++ b/compton/compton.conf
@@ -87,8 +87,7 @@ shadow-blue = 0.0;
 shadow-exclude = [
     "! name~=''",
     "name = 'Notification'",
-    "name *= 'compton'",
-    "class = 'i3bar'"
+    "name *= 'compton'"
 ];
 
 # Avoid drawing shadow on all shaped windows (see also: --detect-rounded-corners)
