--- a/termite/config
+++ b/termite/config
@@ -41,52 +41,54 @@ urgent_on_bell = true
 #### Use websites to make the terminal your own
 #### https://terminal.sexy
 #### https://critical.ch/xterm/
+####
+#### background = rgba(00, 00, 00, 0.8)
 ############################################################
 [colors]
-# Base16 Eighties
-# Author: Chris Kempson (http://chriskempson.com)
+# Base16 Gruvbox dark, hard
+# Author: Dawid Kurek (dawikur@gmail.com), morhetz (https://github.com/morhetz/gruvbox)
 
-foreground      = #d3d0c8
-foreground_bold = #e8e6df
-cursor          = #e8e6df
-background = rgba(00, 00, 00, 0.8)
+foreground      = #d5c4a1
+foreground_bold = #ebdbb2
+cursor          = #ebdbb2
+background      = rgba(00, 00, 00, 0.8)
 
 # 16 color space
 
 # Black, Gray, Silver, White
-color0  = #2d2d2d
-color8  = #747369
-color7  = #d3d0c8
-color15 = #f2f0ec
+color0  = #1d2021
+color8  = #665c54
+color7  = #d5c4a1
+color15 = #fbf1c7
 
 # Red
-color1  = #f2777a
-color9  = #f2777a
+color1  = #fb4934
+color9  = #fb4934
 
 # Green
-color2  = #99cc99
-color10 = #99cc99
+color2  = #b8bb26
+color10 = #b8bb26
 
 # Yellow
-color3  = #ffcc66
-color11 = #ffcc66
+color3  = #fabd2f
+color11 = #fabd2f
 
 # Blue
-color4  = #6699cc
-color12 = #6699cc
+color4  = #83a598
+color12 = #83a598
 
 # Purple
-color5  = #cc99cc
-color13 = #cc99cc
+color5  = #d3869b
+color13 = #d3869b
 
 # Teal
-color6  = #66cccc
-color14 = #66cccc
+color6  = #8ec07c
+color14 = #8ec07c
 
 # Extra colors
-color16 = #f99157
-color17 = #d27b53
-color18 = #393939
-color19 = #515151
-color20 = #a09f93
-color21 = #e8e6df
+color16 = #fe8019
+color17 = #d65d0e
+color18 = #3c3836
+color19 = #504945
+color20 = #bdae93
+color21 = #ebdbb2
