--- a/termite/config
+++ b/termite/config
@@ -8,7 +8,7 @@ cursor_blink = system
 cursor_shape = block
 dynamic_title = true
 filter_unmatched_urls = true
-font = Go Mono for Powerline 12
+font = FantasqueSansMono Nerd Font 14
 geometry = 900x650
 highlight = #2f2f2f
 icon_name = terminal
