--- a/termite/config
+++ b/termite/config
@@ -8,7 +8,7 @@ cursor_blink = system
 cursor_shape = block
 dynamic_title = true
 filter_unmatched_urls = true
-font = DejaVuSansMono Nerd Font 12
+font = Hack Nerd Font Mono 12
 geometry = 900x650
 highlight = #2f2f2f
 icon_name = terminal
