--- a/i3/config
+++ b/i3/config
@@ -395,7 +395,7 @@ exec --no-startup-id 					sh /home/zero/.fehbg
 exec --no-startup-id 					cadence --minimized
 exec --no-startup-id                                    quodlibet --start-hidden
 exec --no-startup-id                                    udiskie -t
-exec_always --no-startup-id                             carla-jack-multi /mnt/Magog/Audio_Projects/carla_default.carxp
+exec --no-startup-id                                    carla-jack-multi /mnt/Magog/Audio_Projects/carla_default.carxp
 exec_always --no-startup-id                             i3altlayout
 exec_always --no-startup-id                             i3wsr
 exec_always --no-startup-id                             $scard
