--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -298,7 +298,7 @@ font_size 13.0
 #: The window padding (in pts) (blank area between the text and the
 #: window border)
 
-# active_border_color #00ff00
+active_border_color #4C9277
 
 #: The color for the border of the active window
 
@@ -311,7 +311,7 @@ font_size 13.0
 #: The color for the border of inactive windows in which a bell has
 #: occurred
 
-# inactive_text_alpha 1.0
+inactive_text_alpha 0.6
 
 #: Fade the text in inactive windows by the specified amount (a number
 #: between zero and one, with zero being fully faded).
@@ -330,7 +330,7 @@ tab_bar_edge top
 
 #: Which edge to show the tab bar on, top or bottom
 
-tab_bar_margin_width 1.0
+tab_bar_margin_width 0.0
 
 #: The margin to the left and right of the tab bar (in pts)
 
