fix carla dialogue

--- a/i3/config
+++ b/i3/config
@@ -190,7 +190,7 @@ bindsym $mod+Shift+r                    restart
 # Move to scratchpad
 bindsym $mod+minus                      move scratchpad
 # Dropdown JACK patchbay
-bindsym $mod+j                          [title="Carla - carla_default.carxp"] scratchpad show, resize set 1400 800, move position center
+bindsym $mod+j                          [title="Carla"] scratchpad show, resize set 1400 800, move position center
 # Dropdown email
 bindsym $mod+m                          [class="Rambox"] scratchpad show, resize set 1400 800, move position center
 # Screenshot - full
