--- a/i3/config
+++ b/i3/config
@@ -343,6 +343,7 @@ for_window [title="yaws" class="Yad"]                   floating enable
 for_window [title="yaws" class="feh"]                   floating enable
 for_window [class="Gnethogs"]                           floating enable
 for_window [class="Gitg"]                               floating enable
+for_window [class="Nvidia-settings"]                    floating enable
 for_window [title="Clock"]                              floating enable, resize set 600 250
 for_window [class="Surf"]                               floating enable, resize set 1400 800, move position center
 
