--- a/polybar/config
+++ b/polybar/config
@@ -8,13 +8,11 @@
 ;==========================================================
 
 [colors]
-background = #44444410
-background-alt = #444
+background = #A0000000
+background-alt = #20000000
+background-alt-alt = #50000000
 foreground = #dfdfdf
 foreground-alt = #555
-primary = #ffb52a
-secondary = #e60053
-alert = #bd2c40
 
 gold   = #FFD700
 white  = #FFFFFF
@@ -27,18 +25,12 @@ salmon = #FF8393
 
 [bar/bar1]
 monitor = DVI-D-0
-width = 100%
 height = 27
-;offset-x = 1%
-;offset-y = 1%
 radius = 0.0
-fixed-center = true
+fixed-center = false
 
 background = ${colors.background}
 foreground = ${colors.foreground}
-
-line-size = 1
-line-color = #f00
 
 border-size = 0
 border-color = #00000000
@@ -46,20 +38,18 @@ border-color = #00000000
 padding-left = 6
 padding-right = 6
 
-module-margin-left = 1
-module-margin-right = 2
+module-margin-left = 0
+module-margin-right = 1
 
-font-0 = Noto Sans Regular:size=10
-font-1 = FontAwesome
+font-0 = Noto Sans Regular:size=11;1
+font-1 = FontAwesome:size=12;1
 font-2 = Weather Icons:size=12;1
 
 modules-left = i3 xwindow
 modules-center = 
-modules-right = openweathermap-fullfeatured date
+modules-right = openweathermap-fullfeatured just-date
 
 tray-position = none
-tray-padding = 2
-tray-background = #44444480
 
 cursor-click = pointer
 cursor-scroll = ns-resize
@@ -74,29 +64,26 @@ fixed-center = false
 background = ${colors.background}
 foreground = ${colors.foreground}
 
-line-size = 1
-line-color = #f00
-
 border-size = 0
 border-color = #00000000
 
 padding-left = 6
 padding-right = 6
 
-module-margin-left = 1
-module-margin-right = 2
+module-margin-left = 0
+module-margin-right = 1
 
-font-0 = Noto Sans Regular:size=10
-font-1 = FontAwesome
+font-0 = Noto Sans Regular:size=11;1
+font-1 = FontAwesome:size=12;1
 font-2 = Weather Icons:size=12;1
 
 modules-left = i3 xwindow
 modules-center = 
-modules-right = filesystem memory cpu eth date
+modules-right = filesystem memory cpu just-time
 
 tray-position = center
-tray-padding = 2
-tray-background = #44444480
+tray-padding = 1
+tray-maxsize = 18
 
 cursor-click = pointer
 cursor-scroll = ns-resize
@@ -105,6 +92,7 @@ cursor-scroll = ns-resize
 type = internal/xwindow
 format-foreground = ${colors.gold}
 label = %title:0:40:...%
+format-prefix ="  "
 
 [module/filesystem]
 type = internal/fs
@@ -132,27 +120,26 @@ strip-wsnumbers = true
 
 label-mode-padding = 2
 label-mode-foreground = #000
-label-mode-background = ${colors.primary}
+label-mode-background = ${colors.background}
 
 ; focused = Active workspace on focused monitor
 label-focused = %name%
 label-focused-background = ${colors.background-alt}
-label-focused-underline= ${colors.primary}
 label-focused-padding = 2
 
 ; unfocused = Inactive workspace on any monitor
 label-unfocused = %name%
+label-unfocused-background = ${colors.background-alt-alt}
 label-unfocused-padding = 2
 
 ; visible = Active workspace on unfocused monitor
 label-visible = %name%
 label-visible-background = ${self.label-focused-background}
-label-visible-underline = ${self.label-focused-underline}
 label-visible-padding = ${self.label-focused-padding}
 
 ; urgent = Workspace with urgency hint set
 label-urgent = %name%
-label-urgent-background = ${colors.alert}
+label-urgent-background = ${colors.red}
 label-urgent-padding = 2
 
 ; Separator in between workspaces
@@ -163,7 +150,6 @@ type = internal/cpu
 interval = 2
 format-prefix = " "
 format-prefix-foreground = ${colors.salmon}
-format-underline = #f90000
 label = %percentage:2%%
 
 [module/memory]
@@ -171,59 +157,21 @@ type = internal/memory
 interval = 2
 format-prefix = " "
 format-prefix-foreground = ${colors.red}
-format-underline = #4bffdc
 label = %percentage_used%%
 
-[module/eth]
-type = internal/network
-interface = enp3s0
-interval = 3.0
-
-format-connected-underline = #55aa55
-format-connected-prefix = " "
-format-connected-prefix-foreground = ${colors.foreground-alt}
-label-connected = %local_ip%
-
-format-disconnected =
-;format-disconnected = <label-disconnected>
-;format-disconnected-underline = ${self.format-connected-underline}
-;label-disconnected = %ifname% disconnected
-;label-disconnected-foreground = ${colors.foreground-alt}
-
-[module/date]
+[module/just-date]
 type = internal/date
 interval = 5
-
-date =
-date-alt = "%A, %d %B %Y"
-
-time = %H:%M
-time-alt = 
-
-format-prefix = " "
+date = "%A, %d %B %Y"
+format-prefix = "  "
 format-prefix-foreground = ${colors.lblue}
-format-underline = #0a6cf5
 
-label = %time% %date%
-
-[module/temperature]
-type = internal/temperature
-thermal-zone = 0
-warn-temperature = 60
-
-format = <ramp> <label>
-format-underline = #f50a4d
-format-warn = <ramp> <label-warn>
-format-warn-underline = ${self.format-underline}
-
-label = %temperature-c%
-label-warn = %temperature-c%
-label-warn-foreground = ${colors.secondary}
-
-ramp-0 = 
-ramp-1 = 
-ramp-2 = 
-ramp-foreground = ${colors.foreground-alt}
+[module/just-time]
+type = internal/date
+interval = 5
+date = "%H:%M"
+format-prefix = "  "
+format-prefix-foreground = ${colors.lblue}
 
 [module/openweathermap-fullfeatured]
 type = custom/script
